<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".Dummy.SQL">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/aa"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/default_avata" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/bb"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Firstname"
                android:inputType="text" />

            <TextView
                android:id="@+id/cc"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Lastname"
                android:inputType="text" />
        </LinearLayout>

            <TextView
                android:id="@+id/dd"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <TextView
                android:id="@+id/ee"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:inputType="phone" />


            <TextView
                android:id="@+id/ff"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Location"
                android:inputType="text" />

            <TextView
                android:id="@+id/gg"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="number" />

            <TextView
                android:id="@+id/hh"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:background="@color/main_green_color"
                android:text="@string/send" />

            <Button
                android:id="@+id/viewdata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:background="@color/red_btn_bg_color"
                android:text="@string/viewdata" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>