<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TB.TB">

    <LinearLayout
        android:id="@+id/aa"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/gradientbackground">

        <TextSwitcher
            android:id="@+id/textSwitcher"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextSwitcher>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/aa"
        android:id="@+id/hair"
        android:src="@drawable/mal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:text="@string/below18"
                android:id="@+id/a"
                android:background="@drawable/button"
                android:onClick="buttonA"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/b"
                android:layout_marginTop="5dp"
                android:onClick="buttonB"
                android:background="@drawable/button"
                android:text="@string/eighteenand25"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/between25and50"
                android:id="@+id/c"
                android:layout_marginTop="5dp"
                android:background="@drawable/button"
                android:onClick="buttonC"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/above50"
                android:id="@+id/d"
                android:background="@drawable/button"
                android:layout_marginTop="5dp"
                android:onClick="buttonD"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>