<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.CompleteProfile">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:paddingTop="30dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/complete_register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/aa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Firstname"
                            android:inputType="text"

                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/bb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Lastname"
                            android:inputType="text"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/cc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/Phone"
                            android:inputType="phone"

                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/dd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Location"
                            android:inputType="text"

                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/ee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Height"
                            android:inputType="number"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4">

                        <EditText
                            android:id="@+id/ff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Weight"
                            android:inputType="number"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/bt_go"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bt_shape_2"
                        android:onClick="clickRegister"
                        android:layout_marginBottom="50dp"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/go"
                        android:textColor="#2fa881" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_close_black_24dp"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>
</RelativeLayout>